--- a/LikeDouYin/app/src/main/res/values/style.xml
+++ b/LikeDouYin/app/src/main/res/values/style.xml
@@ -1,8 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppThemeFullscreen" parent="Theme.AppCompat.NoActionBar">
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowContentOverlay">@null</item>
+
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/color_bg_theme</item>
+        <item name="colorPrimaryDark">@color/color_bg_theme</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
+
 </resources>
