--- a/LikeDouYin/app/src/main/res/layout/fragment_main.xml
+++ b/LikeDouYin/app/src/main/res/layout/fragment_main.xml
@@ -1,9 +1,40 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fragment.MainFragment"
-    android:background="@mipmap/logo">
+    tools:context="fragment.MainFragment">
 
 
-</FrameLayout>
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="45dp" />
+
+    <RelativeLayout
+        android:id="@+id/bottom_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/main_tab_title"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:background="@color/black"
+            app:tabIndicatorColor="@color/white"
+            app:tabTextColor="#CCCCCC"
+            app:tabSelectedTextColor="@color/white"
+            app:tabMode="scrollable"
+            app:tabIndicatorFullWidth="false"
+            android:layout_centerInParent="true" />
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="35dp"
+            android:background="@mipmap/ic_main_menu"
+            android:layout_centerInParent="true"/>
+    </RelativeLayout>
+
+</RelativeLayout>
