修复问题与填加推荐页上下滑动功能

--- a/LikeDouYin/app/src/main/res/layout/avtivity_douyin.xml
+++ b/LikeDouYin/app/src/main/res/layout/avtivity_douyin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DouyinActivity">
+    tools:context=".activity.DouyinActivity">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/lr_view_pager"
