--- a/LikeDouYin/app/src/main/res/layout/fragment_location.xml
+++ b/LikeDouYin/app/src/main/res/layout/fragment_location.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/refresh_layout"
+        android:id="@+id/my_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#554411"/>
