--- a/LikeDouYin/app/src/main/res/layout/fragment_main.xml
+++ b/LikeDouYin/app/src/main/res/layout/fragment_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="fragment.MainFragment">
+    tools:context="com.example.likedouyin.fragment.MainFragment">
 
 
     <FrameLayout
@@ -26,7 +26,6 @@
             app:tabIndicatorColor="@color/white"
             app:tabTextColor="#CCCCCC"
             app:tabSelectedTextColor="@color/white"
-            app:tabMode="scrollable"
             app:tabIndicatorFullWidth="false"
             android:layout_centerInParent="true" />
 
